# ubbagent

./: .bazelignore  .gitignore  BUILD.bazel  DESIGN.md  Dockerfile  Gopkg.toml  Makefile  README.md  WORKSPACE  cloudbuild-tag.yaml  cloudbuild.Dockerfile  cloudbuild.yaml  entitlement.go  fake_reporting_secret.yaml  go.mod  go.sum  main.go  util.go
agentid/: BUILD.bazel  agentid.go  agentid_test.go
aggregator/: aggregator.go  aggregator_test.go
app/: app.go  app_test.go
clock/: BUILD.bazel  clock.go  clock_test.go
config/: BUILD.bazel  config.go  config_test.go  endpoint.go  filters.go  filters_test.go  identity.go  metrics.go  metrics_test.go  sources.go  sources_test.go
demo/: README.md  config.yaml.template
doc/: DESIGN.md
docker/: ubbagent-start
endpoint/: dispatcher.go  dispatcher_test.go  endpoint.go  sender.go  sender_test.go
endpoint/disk/: disk.go  disk_test.go
endpoint/servicecontrol/: servicecontrol.go  servicecontrol_test.go
endpoints/: disk.go  disk_test.go  servicecontrol.go
examples/: disk-only.yaml
http/: BUILD.bazel  http.go
metrics/: BUILD.bazel  aggregator.go  aggregator_test.go  config.go  config_test.go  definition.go  dispatcher.go  dispatcher_test.go  report.go  report_test.go  sender.go
persistence/: BUILD.bazel  disk.go  disk_test.go  memory.go  persistence.go  persistence_test.go  queue.go  value.go
pipeline/: BUILD.bazel  endpoint.go  inputs.go  inputs_test.go  pipeline.go  selector.go  selector_test.go  sender.go
pipeline/builder/: BUILD.bazel  builder.go  builder_test.go
pipeline/endpoints/: BUILD.bazel  disk_test.go  servicecontrol.go  servicecontrol_test.go
pipeline/inputs/: BUILD.bazel  aggregator.go  aggregator_test.go  inputs.go  inputs_test.go
pipeline/senders/: BUILD.bazel  dispatcher.go  dispatcher_test.go  retry.go  retry_test.go
pipeline/sources/: BUILD.bazel  heartbeat.go  heartbeat_test.go
sdk/: BUILD.bazel  sdk.go
sdk/cpp/: BUILD.bazel  agent.cc  agent.h  agent_test.cc  api.go
sdk/python2/: api.c  api.go  api.h  test.py
sdk/python3/: api.c  api.go  api.h  test.py
sender/: dispatcher.go  dispatcher_test.go  retry.go  retry_test.go  sender.go
source/: heartbeat.go  heartbeat_test.go
sources/: heartbeat_test.go
stats/: BUILD.bazel  basic.go  basic_test.go  stats.go
testlib/: BUILD.bazel  clock.go  clock_test.go  mock.go  util.go
util/: BUILD.bazel  util.go
