load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/GoogleCloudPlatform/ubbagent
# gazelle:exclude sdk/python2
# gazelle:exclude sdk/python3
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/ubbagent",
    visibility = ["//visibility:private"],
    deps = [
        "//http:go_default_library",
        "//sdk:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_library(
    name = "util",
    srcs = ["util.go"],
    importpath = "github.com/GoogleCloudPlatform/ubbagent/util",
    visibility = ["//visibility:public"],
    deps = [
    ],
)

go_binary(
    name = "ubbagent",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
