load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["agentid.go"],
    importpath = "github.com/GoogleCloudPlatform/ubbagent/agentid",
    visibility = ["//visibility:public"],
    deps = [
        "//persistence:go_default_library",
        "@com_github_google_uuid//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["agentid_test.go"],
    embed = [":go_default_library"],
    deps = ["//persistence:go_default_library"],
)
