load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "definition.go",
        "report.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/ubbagent/metrics",
    visibility = ["//visibility:public"],
    deps = ["@com_github_google_uuid//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["report_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//:util",
    ]
)
