load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "disk.go",
        "memory.go",
        "persistence.go",
        "queue.go",
        "value.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/ubbagent/persistence",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["persistence_test.go"],
    embed = [":go_default_library"],
)
