load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "endpoint.go",
        "pipeline.go",
        "sender.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/ubbagent/pipeline",
    visibility = ["//visibility:public"],
    deps = [
        "//metrics:go_default_library",
        "@com_github_hashicorp_go_multierror//:go_default_library",
    ],
)
