load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "basic.go",
        "stats.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/ubbagent/stats",
    visibility = ["//visibility:public"],
    deps = [
        "//clock:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["basic_test.go"],
    embed = [":go_default_library"],
    deps = ["//testlib:go_default_library"],
)
