load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "clock.go",
        "mock.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/ubbagent/testlib",
    visibility = ["//visibility:public"],
    deps = [
        "//clock:go_default_library",
        "//metrics:go_default_library",
        "//pipeline:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["clock_test.go"],
    deps = [":go_default_library"],
)
