load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "aggregator.go",
        "inputs.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/ubbagent/pipeline/inputs",
    visibility = ["//visibility:public"],
    deps = [
        "//util:go_default_library",
        "//clock:go_default_library",
        "//metrics:go_default_library",
        "//persistence:go_default_library",
        "//pipeline:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_hashicorp_go_multierror//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "aggregator_test.go",
        "inputs_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//util:go_default_library",
        "//metrics:go_default_library",
        "//persistence:go_default_library",
        "//pipeline:go_default_library",
        "//testlib:go_default_library",
        "@com_github_hashicorp_go_multierror//:go_default_library",
    ],
)
