load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["heartbeat.go"],
    importpath = "github.com/GoogleCloudPlatform/ubbagent/pipeline/sources",
    visibility = ["//visibility:public"],
    deps = [
        "//clock:go_default_library",
        "//config:go_default_library",
        "//metrics:go_default_library",
        "//pipeline:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["heartbeat_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//config:go_default_library",
        "//metrics:go_default_library",
        "//testlib:go_default_library",
        "//util:go_default_library",
    ],
)
