load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "api",
    embed = [":go_default_library"],
    linkmode = "c-archive",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "agent",
    srcs = ["agent.cc"],
    hdrs = ["agent.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":api.cc",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/time",
    ],
)

cc_test(
    name = "agent_test",
    srcs = ["agent_test.cc"],
    deps = [
        ":agent",
        ":api.cc",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
        "@com_jsoncpp//:json",
    ],
)

go_library(
    name = "go_default_library",
    srcs = [
        "agent.cc",
        "agent.h",
        "agent_test.cc",
        "api.go",
    ],
    cgo = True,
    importpath = "github.com/GoogleCloudPlatform/ubbagent/sdk/cpp",
    visibility = ["//visibility:private"],
    deps = ["//sdk:go_default_library"],
)
